# archive-it-client

./: Cargo.toml  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
crates/http-ferry/: Cargo.toml  README.md
crates/http-ferry/examples/: local_download.rs
crates/http-ferry/src/: error.rs  http.rs  lib.rs  local.rs  s3.rs
examples/: download_collection.rs  download_s3.rs  warcs_audit.rs  warcs_inventory.rs  warcs_sync.rs
src/: error.rs  http.rs  lib.rs  wasapi.rs
src/downloads/: mod.rs
src/models/: wasapi.rs
tests/: clients.rs
