[workspace]
members = ["crates/http-ferry"]
resolver = "2"

[package]
name = "archive-it-client"
version = "0.3.0"
edition = "2024"
authors = ["Mark Cooper <gh.aftermath967@passinbox.com>"]
description = "Rust client for Archive-It's partner API and WASAPI"
keywords = ["archive-it", "wasapi", "warc", "web-archiving"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mark-cooper/archive-it-client"

[dependencies]
async-stream = "0.3"
aws-sdk-s3 = { version = "1", default-features = false, features = [
  "behavior-version-latest",
  "rt-tokio",
] }
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false }
http-ferry = { path = "crates/http-ferry", version = "0.1.0", features = [
  "s3",
] }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "stream",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", default-features = false, features = [
  "fs",
  "sync",
  "time",
] }
url = "2"

[dev-dependencies]
aws-config = "1"
aws-credential-types = "1"
aws-smithy-http-client = { version = "1", features = ["test-util"] }
aws-smithy-types = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
csv = "1"
futures = "0.3"
http = "1"
sha1 = "0.11"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
